--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -5,4 +5,11 @@ packages:
     interfaces:
       Storage:
         config:
-          dir: "internal/server/storage"
+          dir: "mocks/storage"
+  io:
+    interfaces:
+      Reader:
+        config:
+          inpackage: false
+          dir: "mocks/io"
+          outpkg: "ioMock"
