--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -11,6 +11,11 @@ packages:
       Compute:
         config:
           dir: "mocks/compute"
+  custom-in-memory-db/internal/server/db/wal:
+    interfaces:
+      Writer:
+        config:
+          dir: "mocks/wal"
   io:
     interfaces:
       Reader:
