fixed mocks added way to pass two errors added wal tests

--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -13,9 +13,11 @@ packages:
           dir: "mocks/compute"
   custom-in-memory-db/internal/server/db/wal:
     interfaces:
-      Writer:
+      WriterInterface:
         config:
+          inpackage: false
           dir: "mocks/wal"
+          outpkg: "walMock"
   io:
     interfaces:
       Reader:
